--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -435,6 +435,7 @@ collections:
       - {label: "Project Short Name", name: "shortName", widget: "string", required: false, hint: "Short name for the project. This is used to generate the name for external project website links."}
       - {label: "Parent Page", name: "parentPageTitle", widget: "relation", collection: "projects", value_field: "title", search_fields: [title], required: false, hint: "Only select for sub-page of a project."}
       - {label: "Subpage Order", name: "subPageOrder", widget: "number", required: false, hint: "Only select for sub-page of a project."}
+      - {label: "Thumbnail Image", name: "thumbnailImage", widget: "image", required: false}
       - {label: "Project Listing Description", name: "description", widget: "markdown", required: false, editor_components: ["image"], hint: "Only write this description for the main page of a project."}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "External Project Website", name: "link", widget: "string", required: false}
