update projects permalink to be file name of projects

--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -1,6 +1,6 @@
 {
 	"layout": "layouts/project.njk",
-	"permalink": "/projects/{{ title | slugify }}/",
+	"permalink": "/projects/{{ page.fileSlug | slugify }}/",
 	"headerBgColor": "coral-500",
 	"headerBorderColor": "coral-800",
 	"headerTextColor": "black"
