--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "es6": true
     },
     "parserOptions": {
-        "ecmaVersion": 2022
+        "ecmaVersion": 2022,
+        "sourceType": "module"
     },
     "rules": {
         "indent": ["error", "tab"],
